Color animation works on mobile; Fixed weird body spacing on mobile;

--- a/source/stylesheets/index/_buttons.scss
+++ b/source/stylesheets/index/_buttons.scss
@@ -25,9 +25,8 @@
   position: relative;
   display:flex;
   overflow:hidden;
-  background: white;
+  filter: saturate(0);
 
-  
   @include media-breakpoint-down(md) {
     height: 50%;
   }
